--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,10 @@ dependencies:
   font_awesome_flutter: any
   pdf: any
   path_provider: any
-  syncfusion_flutter_pdfviewer: ^19.3.46-beta
-  syncfusion_flutter_pdfviewer_web: ^19.3.46-beta
-  printing:
+  flutter_full_pdf_viewer: ^1.0.6
+  printing: ^3.5.0
   modal_progress_hud: ^0.1.3
   universal_html: ^1.2.3
-  circular_countdown_timer: ^0.2.0
 
 
 
@@ -56,8 +54,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/
+  # assets:
+  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
