--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+        with:
+            lfs: true
+            token: ${{secrets.commit_secret}} 
       - uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
