--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -10,10 +10,7 @@ jobs:
       my_secret: ${{secrets.commit_secret}}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-        with:
-            lfs: true
-            token: ${{secrets.commit_secret}} 
+      - uses: actions/checkout@v1 
       - uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
@@ -22,6 +19,7 @@ jobs:
       - run: flutter build web --release
       - run: |
           cd build/web
+          perl -pi -e 's|<base href="/"/>|<base href="https://jaygajjar.ml/Mathematics"/>|' index.html
           git init
           git config --global user.email gajjarjay52@gmail.com
           git config --global user.name j-j-gajjar
