--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -13,10 +13,9 @@ jobs:
       - uses: actions/checkout@v1 
       - uses: subosito/flutter-action@v1
         with:
-          channel: 'stable'
-      - run: flutter config --enable-web
+           channel: 'dev'
       - run: flutter pub get
-      - run: flutter build web --release
+      - run: flutter build web
       - run: |
           cd build/web
           perl -pi -e 's|<base href="/"/>|<base href="https://jaygajjar.ml/Mathematics"/>|' index.html
